[gd_scene load_steps=5 format=3 uid="uid://b1xgtcxgt2h1m"]

[ext_resource type="PackedScene" uid="uid://dvqmh3bw2hahw" path="res://Player1/player1.tscn" id="1_8kiyd"]
[ext_resource type="Script" path="res://single player world/single_player_world.gd" id="1_fcj1c"]
[ext_resource type="PackedScene" uid="uid://cll21i7067aix" path="res://Enemy/enemy.tscn" id="2_detwi"]
[ext_resource type="PackedScene" uid="uid://ddv7ggnmeib88" path="res://DriverEnemy/driver_enemy.tscn" id="3_3httm"]

[node name="single player world" type="Node2D"]
script = ExtResource("1_fcj1c")
enemy_scenes = Array[PackedScene]([ExtResource("2_detwi"), ExtResource("3_3httm")])

[node name="Player1" parent="." instance=ExtResource("1_8kiyd")]
position = Vector2(587, 570)

[node name="player1_spawn_position" type="Marker2D" parent="."]
position = Vector2(62, 600)

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="player_dead" from="Player1" to="." method="_on_player_1_player_dead"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
